--- a/proiect-daw/Views/Users/Index.cshtml
+++ b/proiect-daw/Views/Users/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@* Motorul de cautare *@
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f5f5f5;
-        color: #333;
-        margin: 0;
-        padding: 0;
+    .truncate {
+        display: inline-block;
+        max-width: 10ch;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .container {
@@ -108,7 +108,9 @@
                                 }
                                 else
                                 {
-                                    <p>@user.ProfileDescription</p>
+
+                                    <p class="truncate">@user.ProfileDescription</p>
+
                                 }
 
                                 @if (User.IsInRole("Admin"))
