--- a/proiect-daw/Views/Users/Show.cshtml
+++ b/proiect-daw/Views/Users/Show.cshtml
@@ -42,16 +42,19 @@
             @foreach (var post in Model.Posts)
             {
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card mb-4">
                         <a style="text-decoration:none; color:black"
                            asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">
                             @{
                                 ViewData["CurrentUserId"] = ViewBag.UserCurent;
-                               
+                                ViewData["Likes"] = ViewData[$"Likes_{post.Id}"];
+                             
+
                             }
                             <partial name="PostInfo" model="post" viewdata="ViewData"></partial>
                         </a>
                     </div>
+
                 </div>
             }
         }
