--- a/proiect-daw/Views/Shared/PostInfo.cshtml
+++ b/proiect-daw/Views/Shared/PostInfo.cshtml
@@ -62,7 +62,7 @@
 <!-- Like Button Styling -->
 <style>
     .like-button.btn-blue {
-        background-color: #1877f2; /* Facebook blue */
+        background-color: #1877f2;
         color: #ffffff;
         border-color: #1877f2;
     }
@@ -74,7 +74,7 @@
     }
 
     .like-button:hover {
-        opacity: 0.9; /* Slight hover effect for better UX */
+        opacity: 0.9; 
     }
 </style>
 
